scripts/nullaway/nullgtn/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8.txt
../nullgtn/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:115: error: [NullAway] initializer method does not guarantee @NonNull field weibull (line 79) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Main() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Cola.java:46: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return datoAuxiliar;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
